[gd_scene load_steps=12 format=2]

[ext_resource path="res://enemies/crab/crab.glb" type="PackedScene" id=1]
[ext_resource path="res://enemies/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/Monster.gd" type="Script" id=3]
[ext_resource path="res://kaolzaogoch/main stuff/HealthManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://kaolzaogoch/main stuff/CharacterMover.tscn" type="PackedScene" id=5]
[ext_resource path="res://collectables/yengec_gozu/YengecGozu.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemies/crab/DamageArea.gd" type="Script" id=7]

[sub_resource type="CylinderShape" id=1]
radius = 0.719167
height = 0.7

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.992157, 0.905882, 0, 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 1.12565
height = 0.002

[sub_resource type="CylinderShape" id=4]
radius = 0.644322
height = 0.402315

[node name="Crab" type="KinematicBody" groups=[
"enemies",
]]
collision_layer = 2
collision_mask = 29
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.356745, 0 )
shape = SubResource( 1 )

[node name="Mesh" type="Spatial" parent="."]

[node name="crab" parent="Mesh" instance=ExtResource( 1 )]

[node name="crab" parent="Mesh/crab/crab001/Skeleton" index="0"]
material/0 = SubResource( 2 )

[node name="BoneAttachment" type="BoneAttachment" parent="Mesh/crab/crab001/Skeleton" index="1"]

[node name="HitBox" parent="Mesh/crab/crab001/Skeleton/BoneAttachment" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="Mesh/crab/crab001/Skeleton/BoneAttachment/HitBox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.45415, 0 )
shape = SubResource( 3 )

[node name="HealthManager" parent="." instance=ExtResource( 4 )]
max_health = 1000

[node name="CharacterMover" parent="." instance=ExtResource( 5 )]
move_accel = 2
max_speed = 8
ignore_rotation = true

[node name="YengecGozu" parent="." instance=ExtResource( 6 )]
info = "Yengec Gozu"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DamageArea" type="Area" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="DamageArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.462345, 0.532593 )
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Mesh/crab"]
